sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: ';' expected but '=' found.
i1: Int = 0
        ^AlgBubbleSort1:5: error: ';' expected but '=' found.
trie: Int = 0
          ^