sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

i1: Int = 0
trie: Int = 0

while (trie == 0)
trie = 1;
for(i <- 0 to (getNombreValeurs()-2))  {
	if(getValeur(i) < getValeur(i+1)) {
		echange(i,i+1)
		i1++
	}

	
}
}
